--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     font-size: 1.2rem;
     font-family: "Ang-Regular", Arial, sans-serif;
     font-weight: Regular;
-    background: red;
+    /* background: red; */
     color: black;
     padding: 2rem;
 }
@@ -47,7 +47,7 @@ body {
 /* --------- NAVBAR --------- */
 .nav {
     position: fixed;
-    background: grey;
+    /* background: grey; */
     width: 100%;
     top: 1rem;
     left: 0;
@@ -56,7 +56,7 @@ body {
 
 .navbar {
     width: 96%;
-    background: yellow;
+    /* background: yellow; */
     overflow: auto;
     margin: 0 auto;
 }
@@ -95,7 +95,7 @@ body {
 }
 
 .carousel {
-    background: pink;
+    /* background: pink; */
     width: 100%;
     height: 85vh;
     position: relative;
@@ -130,7 +130,7 @@ body {
     text-decoration: none;
     color: black;
     z-index: 400;
-    background: yellow;
+    /* background: yellow; */
 }
 
 .carousel-button {
@@ -201,7 +201,7 @@ body {
 }
 
 .project-items {
-    background-color: pink;
+    /* background-color: pink; */
     margin-bottom: 2.5rem;
     display: flex;
     width: 100%;
@@ -238,6 +238,45 @@ body {
 }
 
 .about p {
-    margin-top: 1.2rem;
+    word-spacing: 3;
+}
+
+.main p {
+    margin-top: 1.5rem;
+}
+
+.exhibitions p {
+    font-size: 1rem;
+    margin-left: 1vw;
+    margin-top: 3rem;
+}
+
+/* --------- PROJECT PAGE --------- */
+
+.project-overview {
+    padding-top: 10vh;
+    padding-bottom: 10rem;
+}
+
+.tags {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding-left: 6vw;
+    background-color: white;
+    width: 100%;
+}
+
+.tags1 {
+    width: 13%;
+}
+
+.tags2 {
+    width: 77%;
+}
+
+.tags p {
+    font-size: 1rem;
     word-spacing: 3;
 }
