--- a/static/style.css
+++ b/static/style.css
@@ -65,6 +65,7 @@ body {
 .navbar a {
     text-decoration: none;
     color: black;
+    letter-spacing: 0.05rem;
 }
 
 .navbar a:hover {
@@ -239,6 +240,7 @@ body {
 .projects a {
     text-decoration: none;
     color: black;
+    letter-spacing: 0.05rem;
 }
 
 /* --------- ABOUT --------- */
@@ -322,3 +324,35 @@ body {
 .lb-caption {
     font-family: 'Heebo', sans-serif;
 }
+
+
+/* --------- MEDIA QUERIES --------- */
+
+
+/* // X-Small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+
+}
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+
+}
+
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+
+}
+
+/* // Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+
+}
+
+/* // X-Large devices (large desktops, less than 1400px) */
+@media (max-width: 1399.98px) {
+
+}
+
+/* // XX-Large devices (larger desktops)
+// No media query since the xxl breakpoint has no upper bound on its width */
