--- a/static/css/mashup.css
+++ b/static/css/mashup.css
@@ -98,6 +98,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin-top: 1rem;
+    max-width: 1399.98px;
+    margin: 0 auto;
 }
 
 .mashup-overlay {
