--- a/static/style.css
+++ b/static/style.css
@@ -104,19 +104,43 @@ body {
     margin-top: 1rem;
 }
 
-.slide {
+.gallery {
+    max-width: 1399.98px;
+    margin: 0 auto;
+}
+
+.slide-absolute {
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+}
+
+.slide-absolute[data-active] {
+    opacity: 1;
+    z-index: 1;
+}
+
+.slide-absolute > img {
+    display: block;
+    height: 100%;
+    width: 100%;
+    /* height: 90%; */
+}
+
+.slide:not(.slide-absolute) {
     height: 100%;
     /* position: absolute; */
     /* inset: 0;
     opacity: 0; */
 }
 
-.slide[data-active] {
+.slide:not(.slide-absolute)[data-active] {
     /* opacity: 1;
     z-index: 1; */
 }
 
-.slide > img {
+.slide:not(.slide-absolute) > img {
     display: block;
     max-width: 100%;
     max-height: 90%;
@@ -405,6 +429,12 @@ img {
 /* // X-Small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
 
+    .main p {
+        font-size: 1.2rem;
+    }
+    .tags-container {
+        font-size: 0.9rem;
+    }
 }
 
 /* // Small devices (landscape phones, less than 768px) */
