--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: "Ang-Regular";
-    src:  url('fonts/ang-webfont.woff') format('woff');
+    src:  url('../fonts/ang-webfont.woff') format('woff');
 }
 
 @font-face {
     font-family: "MinionPro-Regular";
-    src:  url('fonts/MinionPro-Regular.woff') format('woff');
+    src:  url('../fonts/MinionPro-Regular.woff') format('woff');
 }
 
 *,
