feat: fixed slider.

--- a/templates/home.twig
+++ b/templates/home.twig
@@ -6,86 +6,54 @@
 
   <!-- ---------------------------- CAROUSEL----------------------------- -->
 
-  <section aria-label="Selected Projects" class="gallery swiper-container">
-      <div class="swiper-wrapper carousel">
-          <div class="swiper-slide slide zoomable">
-              <div class="magnifying-glass"></div>
-              <div class="large"></div>
-              <img class="small" src="{{ siteUrl }}static/img/Photo29_28.jpg" alt="Photo29_28.jpg">
-              <div class="caption">
-                  <p>
-                      <a href="project.php">Cool Project</a>
-                  </p>
-              </div>
-          </div>
+<section aria-label="Selected Projects" class="swiper-container gallery zoomable-container">
+    <div class="swiper-wrapper carousel">
+        <div class="swiper-slide slide zoomable">
+            <div class="magnifying-glass"></div>
+            <div class="large"></div>
+            <img class="small" src="{{ siteUrl }}static/img/Photo29_28.jpg" alt="Photo29_28.jpg">
+            <div class="caption">
+                <p>
+                    <a href="project.php">Cool Project</a>
+                </p>
+            </div>
+        </div>
 
-          <div class="swiper-slide slide zoomable">
-              <div class="magnifying-glass"></div>
-              <img src="{{ siteUrl }}static/img/Photo29_28.jpg" alt="Photo29_28.jpg">
-              <div class="caption">
-                  <p>
-                      <a href="project.php">Cool Project</a>
-                  </p>
-              </div>
-          </div>
+        <div class="swiper-slide slide zoomable">
+            <div class="magnifying-glass"></div>
+            <img src="{{ siteUrl }}static/img/Photo29_28.jpg" alt="Photo29_28.jpg">
+            <div class="caption">
+                <p>
+                    <a href="project.php">Cool Project</a>
+                </p>
+            </div>
+        </div>
 
-          <div class="swiper-slide slide zoomable">
-              <div class="magnifying-glass"></div>
-              <img src="{{ siteUrl }}static/img/_DSD9279.jpg" alt="_DSD9279.jpg">
-              <div class="caption">
-                  <p>
-                      <a href="project.php">Cool Project</a>
-                  </p>
-              </div>
-          </div>
+        <div class="swiper-slide slide zoomable">
+            <div class="magnifying-glass"></div>
+            <img src="{{ siteUrl }}static/img/_DSD9279.jpg" alt="_DSD9279.jpg">
+            <div class="caption">
+                <p>
+                    <a href="project.php">Cool Project</a>
+                </p>
+            </div>
+        </div>
 
-          <div class="swiper-slide slide zoomable">
-              <div class="magnifying-glass"></div>
-              <img src="{{ siteUrl }}static/img/_DSD9279.jpg" alt="_DSD9279.jpg">
-              <div class="caption">
-                  <p>
-                      <a href="project.php">Cool Project</a>
-                  </p>
-              </div>
-          </div>
-      </div>
+        <div class="swiper-slide slide zoomable">
+            <div class="magnifying-glass"></div>
+            <img src="{{ siteUrl }}static/img/_DSD9279.jpg" alt="_DSD9279.jpg">
+            <div class="caption">
+                <p>
+                    <a href="project.php">Cool Project</a>
+                </p>
+            </div>
+        </div>
+    </div>
 
-      <button class="carousel-button carousel-button-left left" data-carousel-button="left"><img src="{{ siteUrl }}static/img/prev.png"></button>
-      <button class="carousel-button carousel-button-right right" data-carousel-button="right"><img src="{{ siteUrl }}static/img/next.png"></button>
+    <button class="carousel-button carousel-button-left left" data-carousel-button="left"><img src="{{ siteUrl }}static/img/prev.png"></button>
+    <button class="carousel-button carousel-button-right right" data-carousel-button="right"><img src="{{ siteUrl }}static/img/next.png"></button>
 
-      <!-- <div class="carousel" data-carousel>
-          <button class="carousel-button left" data-carousel-button="left"><img src="./img/prev.png"></button>
-          <button class="carousel-button right" data-carousel-button="right"><img src="./img/next.png"></button>
-
-
-          <ul data-slides>
-              <li class="slide" data-active>
-                  <img src=" }}static/img/carpet3.jpg" alt="carpet3">
-                  <div class="caption">
-                      <p>
-                          <a href="project.php">Cool Project</a>
-                      </p>
-                  </div>
-              </li>
-              <li class="slide">
-                      <img src=" }}static/img/_DSD9279.jpg" alt="carpet3">
-                  <div class="caption">
-                      <p>
-                          <a href="#">caption2</a>
-                      </p>
-                  </div>
-              </li>
-              <li class="slide">
-                  <img src=" }}static/img/Photo29_28.jpg" alt="photo">
-                  <div class="caption">
-                      <p>
-                          <a href="#">caption long-ass caption long-ass caption</a>
-                      </p>
-                  </div>
-              </li>
-          </ul>
-      </div> -->
-  </section>
+</section>
 
 
 <!-- ---------------------------- ABOUT ----------------------------- -->
