--- a/templates/projects/_entry.twig
+++ b/templates/projects/_entry.twig
@@ -2,123 +2,45 @@
 
 {% block content %}
 
-    {% set projects = craft.entries.section('projects').all() %}
-    {% for project in projects %}
-
-        {% set image = project.images.one() %}
-
-    <section aria-label="Selected Projects" class="gallery">
-        <div class="carousel" data-carousel>
-            <button class="carousel-button left" data-carousel-button="left"><img src="./img/prev.png"> </button>
-            <button class="carousel-button right" data-carousel-button="right"><img src="./img/next.png"></button>
-            <ul data-slides>
-                <li class="slide slide-absolute" data-active>
-                    <div class="lens"></div>
-                    <img id="featured" src="{{ image.url }}" alt="{{ image.title }}">
-                    <div class="caption">
-                        <p>
-                            SEÑORA exhibion view #<span class="numbers">1</span>
-                        </p>
-                    </div>
-                </li>
-                <li class="slide slide-absolute">
-                    <div class="lens"></div>
-                    <img src="./img/senora_view2.png" alt="SEÑORA exhibion view no. 2">
-                    <div class="caption">
-                        <p>
-                            SEÑORA exhibion view #<span class="numbers">2</span>
-                        </p>
-                    </div>
-                </li>
-                <li class="slide slide-absolute">
-                    <div class="lens"></div>
-                    <img src="./img/senora_view3.png" alt="SEÑORA exhibion view no. 3">
-                    <div class="caption">
-                        <p>
-                            Project picture #<span class="numbers">3</span>
-                        </p>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- ---------------------------- ABOUT ----------------------------- -->
-
+    {# Project Images #}
+    {% include "components/slider" with {
+        images: entry.images.all()
+    } %}
 
     <section id="about" class="project-overview">
-    <div class="main">
-        <p>
-            {{ project.title }}
-        </p>
-        <p>
-            {{ project.projectDescription }}
-        </p>
-    </div>
-    <div class="spacer-64"></div>
-    <!-- TODO: Calculate how many spacers we need by tags container height -->
+        <div class="main">
+            <h1 class="project-title">
+                {{ entry.title|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw  }}
+            </h1>
+            <p>
+                {{ entry.projectDescription|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw  }}
+            </p>
+        </div>
 
-    <!-- {{ project.meta}} -->
+        {% set tags = entry.projectTags.all() %}
 
-    <div class="tags-container">
-        <div class="tags general-content">
-            <div class="tag-row">
-                <div class="tag-title">
-                    year:
-                </div>
-                <div class="tag-content">
-                    2020
-                </div>
-            </div>
+        {% for tag in tags %}
+            <div class="spacer-1rem"></div>
+        {% endfor %}
+        <div class="spacer-1rem"></div>
 
-            <div class="tag-row">
-                <div class="tag-title">
-                    technique:
+        {% if tags %}
+        <div class="tags-container">
+            <div class="tags general-content">
+                {% for tag in tags %}
+                <div class="tag-row">
+                    <div class="tag-title">
+                        {{ tag.tag|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}
+                    </div>
+                    <div class="tag-content">
+                        {{ tag.tagDescription|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}
+                    </div>
                 </div>
-                <div class="tag-content">
-                    Tibetan Hand-knotting Hand-dyed in abrash technique quality: Approx 125.000 knots / sqm
-                </div>
-            </div>
-
-            <div class="tag-row">
-                <div class="tag-title">
-                    produced in:
-                </div>
-                <div class="tag-content">
-                    Kathmandu, Nepal
-                </div>
-            </div>
-
-            <div class="tag-row">
-                <div class="tag-title">
-                    materials:
-                </div>
-                <div class="tag-content">
-                    Hand-spun Himalayan wool, silk
-                </div>
-            </div>
-
-            <div class="tag-row">
-                <div class="tag-title">
-                    size:
-                </div>
-                <div class="tag-content">
-                    variable dimensions
-                </div>
-            </div>
-
-            <div class="tag-row">
-                <div class="tag-title">
-                    photo:
-                </div>
-                <div class="tag-content">
-                    Ankit Shakya
-                </div>
+                {% endfor %}
             </div>
         </div>
-    </div>
-    </section>
+        {% endif %}
 
-    {% endfor %}
+    </section>
 
 {% endblock %}
