--- a/templates/projects/index.twig
+++ b/templates/projects/index.twig
@@ -1,1 +1,7 @@
-{# {% extends "index" %} #}
+{# {% extends "index" %}
+
+{% set projects = craft.entries.section('projects').all() %}
+{% for project in projects %}
+
+    {% set image = project.images.one() %}
+ #}
