--- a/templates/home.twig
+++ b/templates/home.twig
@@ -62,47 +62,20 @@
   <div id="about" class="main project-overview">
 
       <p>{{entry.about}}</p>
-      <!-- <p>
-          Johanna Ulfsak is an artist and textile designer based in Tallinn, Estonia. Her work is presented as artworks in gallery exhibitions and as non - seasonal collections of design and fashion objects. Ulfsak combines and mixes traditional weaving techniques with contemporary art concepts to create unique items and installations that challenge the established boundaries between disciplines.
-      </p>
-      <p>
-          <a href="#">contact</a>
-      </p>
-      <div class="resume">
-      <p>
-          Johanna Ulfsak's work is sensitive and unique. She is interested in the fragility and toughness of textiles, and the contradictions between intimate craftsmanship and industrial production methods. Knowing how to appreciate slowness, the process of creating works on Johanna's looms is long and meditative. It involves the crossing of two threads, a warp and a weft, one running vertically and the other horizontally, one stretched and the other wavy and intertwined with the first. It is necessary to intertwine the two threads in order to create a textile; a fabric is created when the weft holds it together.
-      </p>
-      <p>
-          If in ancient Greek legend Theseus followed a thread to escape an impossible maze, then the gaps between the threads painted by Johanna give us an opportunity to see the world from a different perspective. A narrative approach to textile history, human spiders weaving a net, hands and fingers wrapped around a thread, act as a kind of memory trigger. It reminds us that textiles have become a really inherent self-evident part of human existence. By weaving functional everyday objects — nets, screens, scarves, carpets — the artist interprets the experience of human life as part of a larger social fabric that is intertwined and inseparably interlinked.
-      </p>
-      <p>
-          Textiles have long ceased to be a mere handicraft and women’s work, and using it as a medium,
-          Ulfsak points out that the hierarchy of materials and techniques based on masculine values still requires refuting and that stereotypical gender distinctions do nothing to help social development. Tenderness and fragility are not feminine signs of weakness but a natural part of human nature. Categories like “high” and “low” appear equally obsolete to the artist. In her works naive patterns are mixed with quotations from textile history, petty bourgeois ornaments with high fashion, antique with post-internet, humour with seriousness. In Johanna's works, it is important to notice and appreciate the manual work and the opportunity to reach non-verbal knowledge through physical action. A modern compulsion to constantly formulate cuts into the space surrounding manual work, and into its silence. Communicated as a text thread, Johanna's work can easily become evasive; material-based art must be seen with the eye and experienced by the body.
-      </p>
-      <p>For Japanese <a href="https://issuu.com/eestisisearhitektideliit/docs/sisu___line__3_issuu">medieval hermits and traveling poets</a> it was important to be in a place that supported poetry and music making, and in order to stay in that place, they had to constantly travel in search of it. Their creations were easy to carry, their dwellings were temporary, foldable, simple, based on the idea that “it does not make sense to erect permanent structures in an inconstant world, but the buildings themselves must flow with the flowing world. Only in this way can one truly remain still.” Equally, Johanna's wind-chime-like textile objects create an optical illusion of rotation, while actually being stationary. Weaving on looms, constantly moving to stay still, creates more space in this flowing world, and inspires us to do the same.
-      </p>
-      <p>
-          Text by Margit Säde <br>
-          Translation Alina Astrova</p>
-      </div> -->
+
       <div class="spacer-1rem"></div>
       <div class="exhibitions general-content">
-          <p>
-              SELECTED PROJECTS & EXHIBITIONS <br><br>
-              <span class="numbers">2019</span> NO FUN RUGS second collection FOLDED presentation, YEIJ Studio, Tallinn, EE <br>
-              <span class="numbers">2019</span> Interwoven, Johanna Ulfsak & Kärt Ojavee, Espoo Museum of Modern Art, Espoo, FI<br>
-              <span class="numbers">2019</span> Installation Live Streams S, Identity, 6th Riga International Textile and Fibre Art Triennial Exhibition, Riga, LV <br>
-              <span class="numbers">2018</span> Save As, Johanna Ulfsak & Kärt Ojavee, Temnikova & Kasela Gallery, Tallinn, EE<br>
-              <span class="numbers">2018</span> Inquiry & Investigation, Johanna Ulfsak & Lolina, Artists Space, New York, US & Cafe Oto, London, UK<br>
-              <span class="numbers">2018</span> Launch of NO FUN RUGS, Pirate Showroom in Julice Laverie, Paris, FR<br>
-              <span class="numbers">2017—2018</span> Interactive textile Live Streams, Intermedial in European Parliament building, Brussels, BE<br>
-              <span class="numbers">2017</span> Live Streams XL, Johanna Ulfsak & Kärt Ojavee, Estonian Presidency in Creative Hub, Tallinn, EE<br>
-              <span class="numbers">2016</span> Live Streams, Johanna Ulfsak & Kärt Ojavee, HOP Gallery, Tallinn, EE<br>
-              <span class="numbers">2016</span> Touring at: Contemporary Art Centre in Rapla, Rapla, EE<br>
-              <span class="numbers">2016</span> The Next Great Fashion Designer, Johanna Ulfsak & Alina Astrova, OVERDUIN & CO, LA, US
-          </p>
-      </div>
 
+        {% set resumeItems = entry.resume.all() %}
+        {% if resumeItems %}
+        <p>
+        SELECTED PROJECTS & EXHIBITIONS <br><br>
+            {% for item in resumeItems %}
+                <span class="numbers">{{ item.year }}</span> {{ item.projectName }}<br />
+            {% endfor %}
+        </p>
+        {% endif %}
+      </div>
   </div>
 
 </section>
