--- a/web/static/assets/css/style.css
+++ b/web/static/assets/css/style.css
@@ -23,11 +23,9 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
 }
 
 body {
-    overflow-x: hidden;
     position: relative;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -44,7 +42,7 @@ body {
     padding: 0 2rem 2rem;
 }
 
-.numbers {
+.numbers, .alt-font {
     font-family: 'Heebo', sans-serif;
 }
 
@@ -350,6 +348,7 @@ body {
 .tag-title {
     width: 13%;
     margin-right: 1rem;
+    flex-shrink: 0;
 }
 
 .tag-content {
@@ -406,6 +405,12 @@ body {
 
 .spacer-2rem {
     height: 2rem;
+}
+
+.project-title {
+    font-size: 1.4rem;
+    font-weight: normal;
+    letter-spacing: 0.1rem;
 }
 
 /* Zoom */
