--- a/templates/components/slider.twig
+++ b/templates/components/slider.twig
@@ -7,7 +7,7 @@
         <div class="swiper-slide slide zoomable">
             <div class="magnifying-glass"></div>
             <div class="large"></div>
-            <img class="small" src="{{ image.url }}" alt="{{ image.title }}">
+            <img class="small" src="{{ image.getUrl('transform1080p') }}" alt="{{ image.title }}">
             <div class="caption">
                 <p>
                     <!-- <a href="project.php">Cool Project</a> -->
