--- a/templates/components/menu.twig
+++ b/templates/components/menu.twig
@@ -2,13 +2,13 @@
 <section class="nav">
     <div class="navbar">
         <div class="item1">
-            <a href="./mashup.php">mashup</a>
+            <a href="{{siteUrl}}mashup">mashup</a>
         </div>
         <div class="item2">
             <a href="{{ siteUrl }}#about">johanna ulfsak</a>
         </div>
         <div class="item3 index-subnav-toggle">
-            <a>index</a>
+            <a class="">index</a>
         </div>
     </div>
 </section>
@@ -29,7 +29,7 @@
             <div class="title">
                 {% set destination = link.navigationDestination.one() %}
                 <a href="{{ destination.url }}">
-                    <p>{{ link.navigationTitle|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}</p>
+                    <p class="letters">{{ link.navigationTitle|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}</p>
                 </a>
             </div>
         </div>
