--- a/templates/home.twig
+++ b/templates/home.twig
@@ -2,59 +2,13 @@
 
 {% block content %}
 
-<script src="{{ siteUrl }}static/assets/js/magnifying-glass.js" type="text/javascript"></script>
 
-  <!-- ---------------------------- CAROUSEL----------------------------- -->
+{% set projects = craft.entries.section('projects').limit(3).all() %}
 
-<section aria-label="Selected Projects" class="swiper-container gallery zoomable-container">
-    <div class="swiper-wrapper carousel">
-        <div class="swiper-slide slide zoomable">
-            <div class="magnifying-glass"></div>
-            <div class="large"></div>
-            <img class="small" src="{{ siteUrl }}static/img/Photo29_28.jpg" alt="Photo29_28.jpg">
-            <div class="caption">
-                <p>
-                    <a href="project.php">Cool Project</a>
-                </p>
-            </div>
-        </div>
-
-        <div class="swiper-slide slide zoomable">
-            <div class="magnifying-glass"></div>
-            <img src="{{ siteUrl }}static/img/Photo29_28.jpg" alt="Photo29_28.jpg">
-            <div class="caption">
-                <p>
-                    <a href="project.php">Cool Project</a>
-                </p>
-            </div>
-        </div>
-
-        <div class="swiper-slide slide zoomable">
-            <div class="magnifying-glass"></div>
-            <img src="{{ siteUrl }}static/img/_DSD9279.jpg" alt="_DSD9279.jpg">
-            <div class="caption">
-                <p>
-                    <a href="project.php">Cool Project</a>
-                </p>
-            </div>
-        </div>
-
-        <div class="swiper-slide slide zoomable">
-            <div class="magnifying-glass"></div>
-            <img src="{{ siteUrl }}static/img/_DSD9279.jpg" alt="_DSD9279.jpg">
-            <div class="caption">
-                <p>
-                    <a href="project.php">Cool Project</a>
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <button class="carousel-button carousel-button-left left" data-carousel-button="left"><img src="{{ siteUrl }}static/img/prev.png"></button>
-    <button class="carousel-button carousel-button-right right" data-carousel-button="right"><img src="{{ siteUrl }}static/img/next.png"></button>
-
-</section>
-
+{# Project Images #}
+{% include "components/project-slider" with {
+    projects: projects
+} %}
 
 <!-- ---------------------------- ABOUT ----------------------------- -->
 
