--- a/web/static/assets/css/mashup.css
+++ b/web/static/assets/css/mashup.css
@@ -112,16 +112,19 @@ body {
     position: absolute;
     opacity: 0;
     --mask:
-      linear-gradient(#000 0 0) center/calc(100% - 1.4rem) calc(100% - 1.4rem) no-repeat,
+      linear-gradient(#000 0 0) center/calc(100% - 1.4rem + 1px) calc(100% - 1.4rem + 1px) no-repeat,
       conic-gradient(from 135deg at top,#0000,#000 1deg 89deg,#0000 90deg) 0 0/1.4rem 0.7rem space no-repeat,
       conic-gradient(from -45deg at bottom,#0000,#000 1deg 89deg,#0000 90deg) 0 100%/1.4rem 0.7rem space no-repeat,
       conic-gradient(from 45deg at left,#0000,#000 1deg 89deg,#0000 90deg) 0 0/0.7rem 1.4rem no-repeat space,
       conic-gradient(from -135deg at right,#0000,#000 1deg 89deg,#0000 90deg) 100% 0/0.7rem 1.4rem no-repeat space;
     -webkit-mask: var(--mask);
     mask: var(--mask);
+    -webkit-transition: opacity ease 0.4s background ease 0.4s;
+    -o-transition: opacity ease 0.4s background ease 0.4s;
+    transition: opacity ease 0.4s background ease 0.4s;
 }
 
-.mashup-overlay:hover {
+.mashup-item:hover .mashup-overlay {
     opacity: 1;
 }
 
@@ -130,12 +133,18 @@ body {
     /* border-radius: 10px; */
     /* background-size: cover; */
     /* background-position: center; */
-    margin: 0.3em;
+    margin: 0.5em;
     height: 20em;
     width: 20em;
     flex-grow: 1;
     position: relative;
 }
+
+.mashup-item:hover {
+    background-size: 110% 110%;
+}
+
+.mashu
 
 .mashup-item:nth-child(2n),
 .mashup-overlay:nth-child(2n) {
@@ -232,7 +241,7 @@ body {
     height: 100%;
     object-fit: cover;
     --mask:
-      linear-gradient(#000 0 0) center/calc(100% - 1.4rem) calc(100% - 1.4rem) no-repeat,
+      linear-gradient(#000 0 0) center/calc(100% - 1.4rem + 1px) calc(100% - 1.4rem + 1px) no-repeat,
       conic-gradient(from 135deg at top,#0000,#000 1deg 89deg,#0000 90deg) 0 0/1.4rem 0.7rem space no-repeat,
       conic-gradient(from -45deg at bottom,#0000,#000 1deg 89deg,#0000 90deg) 0 100%/1.4rem 0.7rem space no-repeat,
       conic-gradient(from 45deg at left,#0000,#000 1deg 89deg,#0000 90deg) 0 0/0.7rem 1.4rem no-repeat space,
@@ -240,6 +249,27 @@ body {
     -webkit-mask: var(--mask);
     mask: var(--mask);
 }
+
+.mashup-window {
+    --mask:
+      linear-gradient(#000 0 0) center/calc(100% - 1.4rem + 1px) calc(100% - 1.4rem + 1px) no-repeat,
+      conic-gradient(from 135deg at top,#0000,#000 1deg 89deg,#0000 90deg) 0 0/1.4rem 0.7rem space no-repeat,
+      conic-gradient(from -45deg at bottom,#0000,#000 1deg 89deg,#0000 90deg) 0 100%/1.4rem 0.7rem space no-repeat,
+      conic-gradient(from 45deg at left,#0000,#000 1deg 89deg,#0000 90deg) 0 0/0.7rem 1.4rem no-repeat space,
+      conic-gradient(from -135deg at right,#0000,#000 1deg 89deg,#0000 90deg) 100% 0/0.7rem 1.4rem no-repeat space;
+    -webkit-mask: var(--mask);
+    mask: var(--mask);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.mashup-item:hover .mashup-window {
+    opacity: 1;
+}
+
 
 .mash-gallery {
     -webkit-filter: none;
@@ -249,80 +279,6 @@ body {
 .mash-gallery:hover {
     -webkit-filter: brightness(70%) !important;
     filter: brightness(70%) !important;
-}
-
-/*--------- INDEX ---------*/
-.index {
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: none;
-}
-
-.active {
-    display: block;
-}
-
-.projects {
-    padding-top: 1.5rem;
-    width: 95%;
-    height: 28rem;
-    background-color: rgba(222,255,121, 0.9);
-    display: flex;
-    flex-direction: column;
-    margin: 4rem auto;
-    overflow-y: scroll;
-
-    --mask:
-  linear-gradient(#000 0 0) center/calc(100% - 1.4rem) 100% no-repeat,
-  conic-gradient(from -135deg at right,#0000,#000 1deg 89deg,#0000 90deg) right/0.7rem 1.40rem repeat-y,
-  conic-gradient(from 45deg at left,#0000,#000 1deg 89deg,#0000 90deg) left/0.7rem 1.40rem repeat-y;
--webkit-mask: var(--mask);
-        mask: var(--mask);
-}
-
-.project {
-    /* background: grey; */
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    padding: 0 3vw 0 2vw;
-}
-
-.project-items {
-    /* background-color: pink; */
-    margin-bottom: 2.5rem;
-    display: flex;
-    width: 100%;
-    text-align: center;
-    z-index: 4;
-}
-
-.project-items:hover, .project-items:active {
-    background-color: white;
-}
-
-.year {
-    width: 10%;
-    /* background: yellow; */
-}
-
-.title {
-    width : 90%;
-    /* background: green; */
-}
-
-.letters {
-    margin-top: 0.2rem;
-}
-
-.projects a {
-    text-decoration: none;
-    color: black;
-    letter-spacing: 0.05rem;
 }
 
 /* --------- LIGHTBOX OVERWRITE --------- */
