--- a/templates/index.twig
+++ b/templates/index.twig
@@ -43,8 +43,8 @@
         {% block content %}
 
         {% endblock %}
-
-
+        
         </div>{# end of site-container #}
+        <script src="{{ siteUrl }}static/assets/js/magnifying-glass.js" type="text/javascript"></script>
 </body>
 </html>
