--- a/templates/components/project-slider.twig
+++ b/templates/components/project-slider.twig
@@ -1,5 +1,4 @@
 {% if projects %}
-<script src="{{ siteUrl }}static/assets/js/magnifying-glass.js" type="text/javascript"></script>
 <section aria-label="Selected Projects" class="swiper-container gallery zoomable-container">
     <div class="swiper-wrapper carousel">
 
@@ -9,7 +8,7 @@
                 <div class="swiper-slide slide zoomable">
                     <div class="magnifying-glass"></div>
                     <div class="large"></div>
-                    <img class="swiper-slide-image" src="{{ image.getUrl('transform1080p') }}" alt="{{ image.title }}">
+                    <img class="swiper-slide-image" data-full="{{ image.url }}" src="{{ image.getUrl('transform1080p') }}" alt="{{ image.title }}">
                     <div class="caption">
                         <p>
                             <a href="{{ project.url }}">{{ project.title|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}</a>
