--- a/templates/mashup.twig
+++ b/templates/mashup.twig
@@ -20,6 +20,13 @@
 
 </section>
 <script src="{{ siteUrl }}static/assets/js/lightbox-plus-jquery.js"></script>
+<script>
+    lightbox.option({
+      'disableScrolling': true,
+      'alwaysShowNavOnTouchDevices': true,
+      'wrapAround': true
+    })
+</script>
 
 {% endif %}
 {% endblock %}
