--- a/web/static/assets/css/style.css
+++ b/web/static/assets/css/style.css
@@ -467,26 +467,42 @@ body {
 /* --------- MEDIA QUERIES --------- */
 
 
-/* // X-Small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {
 
-    .main p {
-        font-size: 1.2rem;
-    }
-    .tags-container {
-        font-size: 0.9rem;
-    }
-}
 
 /* // Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
     .magnifying-glass {
         display: none;
     }
+
+    #site-container {
+        padding: 1rem;
+    }
 }
 
 /* // Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
+    .carousel {
+        height: auto;
+    }
+
+    .main {
+        padding-top: 0;
+    }
+
+    .carousel-button {
+        display: none;
+    }
+
+    .swiper-slide {
+        width: 80% !important;
+    }
+
+    .slide:not(.slide-absolute) > img {
+        max-width: 100%;
+        height: 400px !important;
+        object-fit: cover;
+    }
 
 }
 
@@ -498,6 +514,41 @@ body {
 /* // X-Large devices (large desktops, less than 1400px) */
 @media (max-width: 1399.98px) {
 
+}
+
+/* // X-Small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+
+    .resume-items-list-item {
+        margin-bottom: 0.6rem;
+        display: block;
+    }
+
+    .swiper-container {
+        width: calc(100% + 32px);
+        margin-left: -16px;
+    }
+
+    #site-container {
+        padding: 1rem 16px;
+    }
+
+    .navbar {
+        font-size: 16px;
+    }
+
+    .main p {
+        font-size: 1.2rem;
+    }
+    .tags-container {
+        font-size: 0.9rem;
+    }
+
+    .slide:not(.slide-absolute) > img {
+        max-width: 100%;
+        height: 300px !important;
+        object-fit: cover;
+    }
 }
 
 /* // XX-Large devices (larger desktops)
